test retwis add perf